den1-k8s01/warehouse20/tautulli-farnsworth/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli-farnsworth
  namespace: warehouse20
  labels:
    app: tautulli
    instance: farnsworth
  annotations:
    fluxcd.io/automated: 'true'
    fluxcd.io/tag.tautulli: 'semver: > 2.5'
spec:
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tautulli
      instance: farnsworth
  template:
    metadata:
      labels:
        app: tautulli
        instance: farnsworth
    spec:
      automountServiceAccountToken: false
      containers:
      - name: tautulli
        image: "tautulli/tautulli:v2.5.4"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8181
          name: http
        resources:
          requests:
            cpu: 200m
            memory: "512Mi"
          limits:
            cpu: 2000m
            memory: "2048Mi"
        volumeMounts:
        - mountPath: /config
          name: config
          subPath: data
        livenessProbe:
          httpGet:
            path: /status
            port: http
          initialDelaySeconds: 60
          failureThreshold: 5
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /status
            port: http
          initialDelaySeconds: 60
          failureThreshold: 5
          timeoutSeconds: 10
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: tautulli-farnsworth-data
