den1-k8s01/warehouse20/tautulli-farnsworth/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tautulli-farnsworth
  namespace: warehouse20
  labels:
    app: tautulli
    instance: farnsworth
spec:
  type: ClusterIP
  ports:
  - name: http
    targetPort: http
    port: 8181
    protocol: TCP
  selector:
    app: tautulli
    instance: farnsworth
