den1-k8s01/warehouse20/tautulli-farnsworth/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tautulli-farnsworth
  namespace: warehouse20
spec:
  podSelector:
    matchLabels:
      app: tautulli
      instance: farnsworth
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: organizr
    - podSelector:
        matchLabels:
          app: varken
    - namespaceSelector:
        matchLabels:
          app: ingress-public
    ports:
    - protocol: TCP
      port: http
